--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "proxy": "http://localhost:3000",
+  "start": "node app.js",
   "engines": {
     "node": ">=14.20.1"
   },
